testsuite/tests/typecheck/should_fail/tcfail210.stderr

tcfail210.hs:4:31: error:
    Not in scope: type constructor or class ‘Constraint’
